Add products page, update nav and URLs for GitHub Pages

--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
       <a href="/" class="site-logo">AI Toolkit</a>
       <nav class="site-nav">
         <a href="/">Articles</a>
+        <a href="/products.html">Products</a>
         <a href="/about.html">About</a>
       </nav>
     </div>
