--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>AI Toolkit — Guides, Reviews &amp; Tutorials for AI Automation</title>
   <meta name="description" content="Practical guides for AI agents, automation tools, and VPS hosting. Learn to run AI workflows for $0/month with expert reviews and tutorials.">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://aitoolkit.pages.dev/">
+  <link rel="canonical" href="https://omar-apex.github.io/ai-toolkit-blog/">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -21,7 +21,7 @@
     "@type": "Blog",
     "name": "AI Toolkit",
     "description": "Practical guides for AI agents, automation tools, and VPS hosting.",
-    "url": "https://aitoolkit.pages.dev/"
+    "url": "https://omar-apex.github.io/ai-toolkit-blog/"
   }
   </script>
 
@@ -34,6 +34,7 @@
       <a href="/" class="site-logo">AI Toolkit</a>
       <nav class="site-nav">
         <a href="/">Articles</a>
+        <a href="/products.html">Products</a>
         <a href="/about.html">About</a>
       </nav>
     </div>
